# PhytoCare-api

./: .gitignore  README.md  main.py  multiclass-plant-leaf-disease-classifier.ipynb  pyproject.toml  render.yaml  requirements.txt  utils.py
models/: plant_disease_classifier.pkl  plant_filter.pkl
