[project]
name = "projet-inf-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argostranslate>=1.9.6",
    "dotenv>=0.9.9",
    "fastai>=2.8.2",
    "fastapi>=0.115.13",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "timm>=1.0.15",
    "uvicorn>=0.34.3",
]
